--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <ul>
           <li class="active"><a href="index.html"> Home </a></li>
           <li><a href="informazioni.html"> Informazioni </a></li>
-          <li><a href="contatti">Contatti</a></li>
+          <!-- <li><a href="contatti.html">Contatti</a></li> -->
         </ul>
       </div>
     </header>
@@ -42,24 +42,26 @@
         <br />
         Ciao, mi chiamo Stefano Zogno, ho 19 anni, vengo da Due Carrare(PD) e
         questa è la mia personale pagina WEB.<br />
-        <marquee
-          onmouseover="this.stop()"
-          onmouseout="this.start()"
-          behavior="scroll"
-          direction="right"
-          ><img src="immagini/gif1.gif" alt="" />
-        </marquee>
+        <p style="font-size: 25px">
+          Sul bottone informazioni trovi tutte le mie esperienze e la formazione
+          acquisita. <br />
+          <!-- Sul bottone contatti puoi usare i social per contattarmi o vedere i
+          miei profili. -->
+        </p>
       </div>
     </main>
     <footer>
+      <!--
       <ul>
         <li><a href="#"> Voglio sapere di più </a></li>
         <li><a href="#"> Domande frequenti </a></li>
       </ul>
-      <hr />
-      <p>&copyCopyright: Stefano Zogno</p>
+      <hr />-->
       <p>
-        Ultimo aggiornamento della pagina: 20/09/2019
+        &copyCopyright: Stefano Zogno <br />
+        Ultimo aggiornamento della pagina: 20/09/2019 !!!
+        <br />
+        LA PAGINA WEB PUO' ESSERE VISUALIZZATA SOLO CON IL PC, NON DAL CELLULARE
       </p>
     </footer>
   </body>
