--- a/informazioni.html
+++ b/informazioni.html
@@ -10,12 +10,15 @@
   <body>
     <header>
       <span class="home"
-        ><a href="index.html"><span></span> HOME </a>
+        ><a href="index.html"
+          ><span></span> <span></span> <span></span> <span></span> HOME
+        </a>
       </span>
       <form>
         <span class="download">
           <a
-            href="https://drive.google.com/file/d/1sYM9sxO9xh5EheAskh5f_7m8R-a2P1xy/view?usp=sharing"
+            href="https://drive.google.com/file/d/1tWMfGHB8RIxpVReHS-VM8-RcIenr8qxi/view?usp=sharing"
+            target="_blank"
           >
             <span></span>
             <span></span>
@@ -23,11 +26,6 @@
             <span></span>
             CURRICULUM VITAE
           </a>
-          <!-- <input
-            type="button"
-            value="DOWNLOAD MY CV"
-            onclick="window.location.href='https://drive.google.com/file/d/1sYM9sxO9xh5EheAskh5f_7m8R-a2P1xy/view?usp=sharing'"
-          />-->
         </span>
       </form>
       <br />
