--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
         <img src="immagini/logo.jpg" alt="logo" />
       </div>
       <div class="home">
-        <ul>
-          <li class="active"><a href="index.html"> Home </a></li>
-          <li><a href="informazioni.html"> Informazioni </a></li>
-          <!-- <li><a href="contatti.html">Contatti</a></li> -->
-        </ul>
+        <nav>
+          <ul>
+            <li class="active"><a href="index.html"> Home </a></li>
+            <li><a href="informazioni.html"> Informazioni </a></li>
+            <!-- <li><a href="contatti.html">Contatti</a></li> -->
+          </ul>
+        </nav>
       </div>
     </header>
     <main>
