--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         <img src="./immagini/foto.png" alt="foto personale" />
       </div>
       <div class="descr">
-        <br />
-        Ciao, mi chiamo Stefano Zogno, ho 19 anni, vengo da Due Carrare(PD) e
+        
+        Ciao, mi chiamo Stefano Zogno, ho 19 anni, vengo da <br> Due Carrare(PD) e
         questa è la mia personale pagina WEB.<br />
         <p style="font-size: 25px">
           Sul bottone informazioni trovi tutte le mie esperienze e la formazione
@@ -53,17 +53,19 @@
       </div>
     </main>
     <footer>
-      <!--
       <ul>
-        <li><a href="#"> Voglio sapere di più </a></li>
-        <li><a href="#"> Domande frequenti </a></li>
+        <li><a href="sapere.html"> Voglio sapere di più </a></li>
+        <!--  <li><a href="#"> Domande frequenti </a></li>>-->
       </ul>
-      <hr />-->
+      <hr />
       <p>
         &copyCopyright: Stefano Zogno <br />
         Ultimo aggiornamento della pagina: 20/09/2019 !!!
         <br />
-        LA PAGINA WEB PUO' ESSERE VISUALIZZATA SOLO CON IL PC, NON DAL CELLULARE
+        <b>
+          LA PAGINA WEB PUO' ESSERE VISUALIZZATA SOLO CON IL PC, NON DAL
+          CELLULARE
+        </b>
       </p>
     </footer>
   </body>
