--- a/informazioni.html
+++ b/informazioni.html
@@ -69,15 +69,16 @@
       </p>
     </main>
     <footer>
-      <br />&copyCophyright Stefano Zogno
+      <ul>
+        <li><a href="sapere.html"> Voglio sapere di più </a></li>
+      </ul>
+      &copyCophyright Stefano Zogno || Ultimo aggiornamento pagina web
+      21/09/2019
       <br />
-      Ultimo aggiornamento pagina web 21/09/2019
       <i>
-        <h4>
-          Clicca il secondo bottone in alto a sinistra per vedere e scaricare il
-          mio CV
-        </h4></i
-      >
+        Clicca il secondo bottone in alto a sinistra per vedere e scaricare il
+        mio CV
+      </i>
     </footer>
   </body>
 </html>
