--- a/sapere.html
+++ b/sapere.html
@@ -23,7 +23,7 @@
     </p>
     <p>
       Le pagine web verranno ampliate di volta in volta con più effetti grafici
-      e in più si aggiungerà la funzionalità di dialogare con l'utente
+      e in più si aggiungerà la funzionalità di dialogare con l'utente.
     </p>
     <p id="data">Ultima modifica: 24/09/2019</p>
     <br />
