--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         
         Ciao, mi chiamo Stefano Zogno, ho 19 anni, vengo da <br> Due Carrare(PD) e
         questa è la mia personale pagina WEB.<br />
-        <p style="font-size: 25px">
+        <p style="font-size: 100%">
           Sul bottone informazioni trovi tutte le mie esperienze e la formazione
           acquisita. <br />
           <!-- Sul bottone contatti puoi usare i social per contattarmi o vedere i
