--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="present">
         <i>Stefano Zogno</i>
         <br />
-        <span id="data"
+        <span id="impos"
           >10/09/2000 <br />
           Due Carrare(PD)
         </span>
@@ -41,9 +41,8 @@
         <img src="./immagini/foto.png" alt="foto personale" />
       </div>
       <div class="descr">
-        
-        Ciao, mi chiamo Stefano Zogno, ho 19 anni, vengo da <br> Due Carrare(PD) e
-        questa è la mia personale pagina WEB.<br />
+        Ciao, mi chiamo Stefano Zogno, ho 19 anni, vengo da <br />
+        Due Carrare(PD) e questa è la mia personale pagina WEB.<br />
         <p style="font-size: 100%">
           Sul bottone informazioni trovi tutte le mie esperienze e la formazione
           acquisita. <br />
