--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
   <body>
     <!-- logo -->
     <header>
-      <div class="logo">
-        <img src="immagini/logo.jpg" alt="logo" />
-      </div>
+      <img src="immagini/logo.jpg" alt="logo" />
       <div class="home">
         <nav>
           <ul>
@@ -41,7 +39,7 @@
         <img src="./immagini/foto.png" alt="foto personale" />
       </div>
       <div class="descr">
-        Ciao, mi chiamo Stefano Zogno, ho 19 anni, vengo da <br />
+        Ciao, mi chiamo Stefano Zogno, ho 19 anni, vengo da 
         Due Carrare(PD) e questa è la mia personale pagina WEB.<br />
         <p style="font-size: 100%">
           Sul bottone informazioni trovi tutte le mie esperienze e la formazione
