--- a/index.html
+++ b/index.html
@@ -36,11 +36,13 @@
           Due Carrare(PD)
         </span>
         <br />
-        <img src="./immagini/foto.png" alt="foto personale" />
+        <div class="foto">
+          <img src="./immagini/foto.png" alt="foto personale" />
+        </div>
       </div>
       <div class="descr">
-        Ciao, mi chiamo Stefano Zogno, ho 19 anni, vengo da 
-        Due Carrare(PD) e questa è la mia personale pagina WEB.<br />
+        Ciao, mi chiamo Stefano Zogno, ho 19 anni, vengo da Due Carrare(PD) e
+        questa è la mia personale pagina WEB.<br />
         <p style="font-size: 100%">
           Sul bottone informazioni trovi tutte le mie esperienze e la formazione
           acquisita. <br />
