--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
       <div class="present">
         <i>Stefano Zogno</i>
         <br />
-        <span id="impos"
-          >10/09/2000 <br />
-          Due Carrare(PD)
-        </span>
+        <div id="impos">
+          10/09/2000 <br />
+          Due Carrare <br />
+          (PD)
+        </div>
         <br />
         <div class="foto">
           <img src="./immagini/foto.png" alt="foto personale" />
@@ -61,10 +62,6 @@
         &copyCopyright: Stefano Zogno <br />
         Ultimo aggiornamento della pagina: 20/09/2019 !!!
         <br />
-        <b>
-          LA PAGINA WEB PUO' ESSERE VISUALIZZATA SOLO CON IL PC, NON DAL
-          CELLULARE
-        </b>
       </p>
     </footer>
   </body>
