--- a/informazioni.html
+++ b/informazioni.html
@@ -24,7 +24,7 @@
             <span></span>
             <span></span>
             <span></span>
-            CURRICULUM VITAE
+            CURRICULUM
           </a>
         </span>
       </form>
@@ -68,7 +68,7 @@
         <img src="" alt="" />
       </p>
     </main>
-      <footer>
+    <footer>
       <ul>
         <li><a href="sapere.html"> Voglio sapere di più </a></li>
       </ul>
