--- a/informazioni.html
+++ b/informazioni.html
@@ -68,7 +68,7 @@
               <h3>Curriculum</h3>
               <p>Clicca il bottone per vedere il mio CV</p>
               <p>
-                <a href="#" class="btn btn-primary" role="button">Vedi CV</a>
+                <a href="https://drive.google.com/file/d/1d7JVIpSG_DOQgWCXnlBWYxa2fXJYzaKv/view?usp=sharing" class="btn btn-primary" role="button">Vedi CV</a>
               </p>
             </div>
           </div>
