--- a/informazioni.html
+++ b/informazioni.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <nav class="navbar navbar-inverse">
-      <div class="container-fluid">
+      <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
           <button
@@ -33,7 +33,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="index.html">Home</a></li>
             <li class="active">
-              <a href="#"
+              <a href="informazioni.html"
                 >Informazioni <span class="sr-only">(current)</span></a
               >
             </li>
@@ -61,19 +61,24 @@
     <hr />
     <div class="container">
       <div class="row">
-        <div class="col-sm-2 col-md-2 col-xs-6 col-sm-offset-1">
+        <div class="col-sm-3 col-md-2 col-xs-6">
           <div class="thumbnail">
-            <img src="immagini/img4.JPG" alt="..." />
+            <img src="immagini/img4.JPG" alt="CV" />
             <div class="caption">
-              <h3>Curriculum</h3>
+              <h3>CV</h3>
               <p>Clicca il bottone per vedere il mio CV</p>
               <p>
-                <a href="https://drive.google.com/file/d/1d7JVIpSG_DOQgWCXnlBWYxa2fXJYzaKv/view?usp=sharing" class="btn btn-primary" role="button">Vedi CV</a>
+                <a
+                  href="https://drive.google.com/file/d/1d7JVIpSG_DOQgWCXnlBWYxa2fXJYzaKv/view?usp=sharing"
+                  class="btn btn-primary"
+                  role="button"
+                  >Vedi CV</a
+                >
               </p>
             </div>
           </div>
         </div>
-        <div class="col-sm-9 col-md-9 col-xs-5">
+        <div class="col-sm-9 col-md-10">
           <p class="lead">
             Sono Stefano Zogno, diplomato come Perito Informatico presso IIS
             J.F.Kennedy Monselice. Sono appassionato dell'informatica in
