--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
             <li class="active">
-              <a href="#">Home <span class="sr-only">(current)</span></a>
+              <a href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li><a href="informazioni.html">Informazioni</a></li>
             <li class="dropdown">
