--- a/informazioni.html
+++ b/informazioni.html
@@ -37,7 +37,7 @@
                 >Informazioni <span class="sr-only">(current)</span></a
               >
             </li>
-            <li class="dropdown">
+            <!--    <li class="dropdown">
               <a
                 href="#"
                 class="dropdown-toggle"
@@ -51,7 +51,7 @@
               <ul class="dropdown-menu">
                 <li><a href="saperePiu.html">Voglio sapere di più</a></li>
               </ul>
-            </li>
+            </li>-->
           </ul>
         </div>
         <!-- /.navbar-collapse -->
@@ -69,7 +69,7 @@
               <p>Clicca il bottone per vedere il mio CV</p>
               <p>
                 <a
-                  href="https://drive.google.com/file/d/1d7JVIpSG_DOQgWCXnlBWYxa2fXJYzaKv/view?usp=sharing"
+                  href="https://drive.google.com/file/d/1LcAiVc5zEEwADAu79jqlB4aymSCNLSrT/view?usp=sharing"
                   class="btn btn-primary"
                   role="button"
                   >Vedi CV</a
@@ -79,7 +79,7 @@
           </div>
         </div>
         <div class="col-sm-9 col-md-10">
-          <p class="lead">
+          <p><h4>
             Sono Stefano Zogno, diplomato come Perito Informatico presso IIS
             J.F.Kennedy Monselice. Sono appassionato dell'informatica in
             generale da quando avevo 12 anni. Fin da piccolo creavo progetti per
@@ -87,6 +87,7 @@
             dell'informatica alle superiori la mia passione si è trasformata in
             studio e pratica. Posso annoverare qui i miei più importanti
             progetti realizzati:
+          </h4> 
           </p>
           <ul>
             <li>
