--- a/informazioni.html
+++ b/informazioni.html
@@ -61,12 +61,12 @@
     <hr />
     <div class="container">
       <div class="row">
-        <div class="col-sm-3 col-md-2 col-xs-6">
+        <div class="col-sm-3 col-md-2 col-xs-12">
           <div class="thumbnail">
             <img src="immagini/img4.JPG" alt="CV" />
             <div class="caption">
               <h3>CV</h3>
-              <p>Clicca il bottone per vedere il mio CV</p>
+              <p>Clicca il bottone blu per vedere il mio CV</p>
               <p>
                 <a
                   href="https://drive.google.com/file/d/1LcAiVc5zEEwADAu79jqlB4aymSCNLSrT/view?usp=sharing"
@@ -78,8 +78,8 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-9 col-md-10">
-          <p><h4>
+        <div class="col-sm-9 col-md-10 col-xs-12">
+          <p> <h4>
             Sono Stefano Zogno, diplomato come Perito Informatico presso IIS
             J.F.Kennedy Monselice. Sono appassionato dell'informatica in
             generale da quando avevo 12 anni. Fin da piccolo creavo progetti per
@@ -87,7 +87,7 @@
             dell'informatica alle superiori la mia passione si è trasformata in
             studio e pratica. Posso annoverare qui i miei più importanti
             progetti realizzati:
-          </h4> 
+            </h4>
           </p>
           <ul>
             <li>
