--- a/informazioni.html
+++ b/informazioni.html
@@ -106,36 +106,92 @@
           </ul>
         </div>
       </div>
-      Linguaggi studiati:
+      <h4> Linguaggi studiati: (clicca sulle immagini per vedere i dettagli) </h4>
       <div class="row">
         <div class="col-xs-6 col-sm-3 col-md-2">
-          <img src="immagini/c++.jpg" alt="c++" />
+          <img  src="immagini/c++.jpg" alt="c++" data-toggle="popover" data-html="true" title="<strong> C++  conoscenze </strong>" 
+          data-content='<ul>
+                          <li> Puntatori </li>
+                          <li> Classi </li>
+                          <li> Structure </li>
+                          <li> Funzioni </li>
+                          <li> Basi di C++ </li>
+                        </ul>' />                       
         </div>
         <div class="col-xs-6 col-sm-3 col-md-2">
-          <img src="immagini/js.jpg" alt="JAVASCRIPT" />
+          <img src="immagini/js.jpg" alt="JAVASCRIPT" data-toggle="popover" data-html="true" title="<strong> JAVASCRIPT conoscenze </strong>"
+          data-content="<ul>
+                          <li> Basi di Javascript </li>
+                        </ul>
+          "/>
         </div>
         <div class="col-xs-6 col-sm-3 col-md-2">
-          <img src="immagini/java.jpg" alt="java" />
+          <img src="immagini/java.jpg" alt="java" data-toggle="popover" data-html="true" title="<strong> JAVA conoscenze </strong>"
+          data-content="<ul>
+                          <li> Basi di JAVA </li>
+                          <li> OOP </li>
+                          <li> Interfaccia base </li>
+                          <li> Funzioni </li>
+                          <li> Ereditarietà, Polimorfismo </li>
+                        </ul>
+          "/>
         </div>
         <div class="col-xs-6 col-sm-3 col-md-2">
-          <img src="immagini/php5.jpg" alt="php5" />
+          <img src="immagini/php5.jpg" alt="php5" class="responsive" data-toggle="popover" data-html="true" style="border-right-width: 81px;"  data-placement="left" title="<strong> PHP5 conoscenze </strong>"
+          data-content="<ul>
+                          <li> Basi di PHP5 </li>
+                          <li> Funzioni </li>
+                          <li> OOP </li>
+                          <li> MySQLI </li>
+                          <li> Form </li>
+                          <li> Procedure </li>
+                          <li> Sessioni </li>
+                        </ul>
+          "/>
         </div>
         <div class="col-xs-6 col-sm-3 col-md-2">
-          <img src="immagini/mysql.jpg" alt="mysql" />
+          <img src="immagini/mysql.jpg" alt="mysql" data-toggle="popover"  data-placement="top" data-html="true" title="<strong> SQL conoscenze </strong>"
+          data-content="<ul>
+                          <li> DDL </li>
+                          <li> DML </li>
+                          <li> QL: Query </li>
+                          <li> JOIN </li>
+                          <li> Subqueries </li>
+                        </ul> 
+          "/>
         </div>
         <div class="col-xs-6 col-sm-3 col-md-2">
-          <img src="immagini/access.jpg" alt="access" />
+          <img src="immagini/access.jpg" alt="access" data-toggle="popover" data-html="true" title="<strong> ACCESS conoscenze </strong>"
+          data-content="<ul>
+                          <li> Maschere </li>
+                          <li> Query </li>
+                          <li> Report </li>
+                          <li> Macro </li>
+                          <li> Gestione DB </li>
+                        </ul>
+          "/>
         </div>
         <div class="col-xs-6 col-sm-3 col-md-2">
-          <img src="immagini/html5.jpg" alt="html" />
+          <img src="immagini/html5.jpg" alt="html" data-toggle="popover" data-html="true" title="<strong> HTML5 conoscenze </strong>"
+          data-content="<ul>
+                          <li> Avanzato livello di conoscenza di HTML5 </li>
+                          <li> Conoscenza di eventuali framework: Bootstrap</li>
+                          <li> WordPress & CMS </li>
+                        </ul>
+          "/>
         </div>
         <div class="col-xs-6 col-sm-3 col-md-2">
-          <img src="immagini/css.jpg" alt="css" />
+          <img src="immagini/css.jpg" alt="css" data-toggle="popover" data-html="true" title="<strong> CSS conoscenze </strong>"
+          data-content="<ul>
+                          <li> Conoscenza medio-alta di CSS </li>
+                        </ul>
+          "/>
         </div>
       </div>
     </div>
     <!-- script -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script> $('[data-toggle="popover"]').popover() </script>
   </body>
 </html>
