--- a/informazioni.html
+++ b/informazioni.html
@@ -25,7 +25,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Pagina di Stefano Zogno</a>
+          <a class="navbar-brand" href="index.html">Pagina di Stefano Zogno</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
