--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <div class="carousel-inner" role="listbox">
             <div
               class="item active"
-              style="background: url('immagini/img3.jpg')"
+              style="background: url('immagini/img3.jpg')";
             >
               <div class="carousel-caption">
                 <h2><b> Perito informatico </b></h2>
@@ -109,19 +109,13 @@
           </div>
         </div>
         <!-- Controls -->
-        <a
-          class="left carousel-control"
-          href="#carousel-example-generic"
-          role="button"
-          data-slide="prev"
-        >
+        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
         </a>
-        <a
-          class="right carousel-control"
-          href="#carousel-example-generic"
-          role="button"
-          data-slide="next"
-        >
+        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
         </a>
       </div>
     </div>
