--- a/index.html
+++ b/index.html
@@ -125,13 +125,14 @@
          <h2 style="font-family: Verdana, Geneva, Tahoma, sans-serif"> CHI SONO: </h2> <br />
           Mi chiamo Stefano Zogno, vengo da Due Carrare (PD) e sono un giovane
           appassionato alla programmazione e perciò al mondo dell'informatica
-          fin da piccolo.
+          fin da piccolo. <br> I miei hobby in linea generale sono leggere, programmare e ovviamente praticare della sana attività fisica.
+          Sono molto intraprendente, curioso e appassionato all'informatica.
         </div>
         <div class="col-md-36 col-sm-6">
           <h2 style="font-family: Verdana, Geneva, Tahoma, sans-serif">STUDI: </h2><br />
           Sono diplomato come perito informatico al IIS Kennedy Monselice (voto
           96/100). Gli studi sono durati 5 anni, ho avuto anche l'oppurtunità di
-          partecipare a vari progetti informatici e tecnologici.
+          partecipare a vari progetti informatici e tecnologici. (vedi su: <a href="informazioni.html">informazioni</a> )
           <br />
           Al momento sto aspettando l'inizio dell'ITS di Padova che concerne il
           cloud & backend developer.
