--- a/informazioni.html
+++ b/informazioni.html
@@ -83,10 +83,10 @@
             Sono Stefano Zogno, diplomato come Perito Informatico presso IIS
             J.F.Kennedy Monselice. Sono appassionato dell'informatica in
             generale da quando avevo 12 anni. Fin da piccolo creavo progetti per
-            arduino in C# e applicazioni per divertimento. Con lo studio
+            arduino in C# e applicazioni per divertimento. <br> Con lo studio
             dell'informatica alle superiori la mia passione si è trasformata in
-            studio e pratica. Posso annoverare qui i miei più importanti
-            progetti realizzati:
+            studio e pratica. In terza superiore ho studiato C++ e HTML, in quarta JAVA e infine in quinta PHP con gestione del DB, HTML e CSS. <br> Posso annoverare qui i miei più importanti
+            progetti realizzati durante il periodo scolastico:
             </h4>
           </p>
           <ul>
