--- a/informazioni.html
+++ b/informazioni.html
@@ -106,7 +106,8 @@
           </ul>
         </div>
       </div>
-      <h4> Linguaggi studiati: (clicca sulle immagini per vedere i dettagli) </h4>
+      <h4 style="color:red"> COMPETENZE (clicca sulle immagini per vedere i dettagli) </h4>
+      <p class="lead"> Linguaggi:  </p>
       <div class="row">
         <div class="col-xs-6 col-sm-3 col-md-2">
           <img  src="immagini/c++.jpg" alt="c++" data-toggle="popover" data-html="true" title="<strong> C++  conoscenze </strong>" 
@@ -150,28 +151,6 @@
           "/>
         </div>
         <div class="col-xs-6 col-sm-3 col-md-2">
-          <img src="immagini/mysql.jpg" alt="mysql" data-toggle="popover"  data-placement="top" data-html="true" title="<strong> SQL conoscenze </strong>"
-          data-content="<ul>
-                          <li> DDL </li>
-                          <li> DML </li>
-                          <li> QL: Query </li>
-                          <li> JOIN </li>
-                          <li> Subqueries </li>
-                        </ul> 
-          "/>
-        </div>
-        <div class="col-xs-6 col-sm-3 col-md-2">
-          <img src="immagini/access.jpg" alt="access" data-toggle="popover" data-html="true" title="<strong> ACCESS conoscenze </strong>"
-          data-content="<ul>
-                          <li> Maschere </li>
-                          <li> Query </li>
-                          <li> Report </li>
-                          <li> Macro </li>
-                          <li> Gestione DB </li>
-                        </ul>
-          "/>
-        </div>
-        <div class="col-xs-6 col-sm-3 col-md-2">
           <img src="immagini/html5.jpg" alt="html" data-toggle="popover" data-html="true" title="<strong> HTML5 conoscenze </strong>"
           data-content="<ul>
                           <li> Avanzato livello di conoscenza di HTML5 </li>
@@ -188,6 +167,91 @@
           "/>
         </div>
       </div>
+      <br /> <br />
+      <p class="lead">Database:</p> 
+        <div class="row">
+          <div class="col-xs-6 col-sm-3 col-md-2">
+            <img src="immagini/mysql.jpg" alt="mysql" data-toggle="popover" data-placement="" data-html="true" title="<strong> SQL conoscenze </strong>" data-content="
+                      <ul>
+                        <li> DDL </li>
+                        <li> DML </li>
+                        <li> QL: Query </li>
+                        <li> JOIN </li>
+                        <li> Subqueries </li>
+                      </ul> 
+                    " />
+          </div>
+          <div class="col-xs-6 col-sm-3 col-md-2">
+            <img src="immagini/access.jpg" alt="access" data-toggle="popover" data-html="true" title="<strong> ACCESS conoscenze </strong>" data-content="
+                      <ul>
+                        <li> Maschere </li>
+                        <li> Query </li>
+                        <li> Report </li>
+                        <li> Macro </li>
+                        <li> Gestione DB </li>
+                      </ul>
+                    " />
+          </div>
+      </div> 
+      <br /> <br />
+      <p class="lead">Sistemi operativi:</p>
+      <div class="row">
+        <div class="col-xs-6 col-sm-3 col-md-2">
+          <img src="immagini/windows10.jpg" alt="windows10" data-toggle="popover" data-placement="" data-html="true" title="<strong> Windows10 </strong>" data-content="
+                          " />
+        </div>
+        <div class="col-xs-6 col-sm-3 col-md-2">
+          <img src="immagini/linux.jpg" alt="linux" data-toggle="popover" data-html="true" title="<strong> GNU/Linux </strong>" data-content="
+                          " />
+        </div>
+        <div class="col-xs-6 col-sm-3 col-md-2">
+          <img src="immagini/android.jpg" alt="android" data-toggle="popover" data-placement="" data-html="true" title="<strong> Android </strong>" data-content="
+                                  " />
+        </div>
+      </div>
+      <br> <br>
+      <p class="lead">Certificazioni:</p> 
+      <div class="row">
+          <div class="col-xs-12 col-sm-6">
+            <img src="immagini/certificazioneCode.jpeg" alt="certificazione" data-toggle="popover" data-placement="" style="
+            width: 520px; height: 500px;" data-html="true" title="<strong> certificazione </strong>" />
+          </div>
+          <div class="col-xs-12 col-sm-6">
+            <img src="immagini/ZognoStefanoCertificazione.jpg" alt="certificazione" data-toggle="popover" data-placement="" style="
+            width: 520px; height: 520px;" data-html="true" title="<strong> certificazione </strong>" />
+          </div>
+          <div class="col-xs-12 col-sm-6">
+            <img src="immagini/francese1.jpg" alt="certificazione" data-toggle="popover" data-placement="" style="
+            width: 520px; height: 500px;" data-html="true" title="<strong> certificazione </strong>" />
+          </div>
+          <div class="col-xs-12 col-sm-6">
+            <img src="immagini/francese2.jpg" alt="certificazione" data-toggle="popover" data-placement="" style="
+            width: 520px; height: 500px;" data-html="true" title="<strong> certificazione </strong>" />
+          </div>
+          <div class="col-xs-12 col-sm-6">
+            <img src="immagini/cert2.jpg" alt="certificazione" data-toggle="popover" data-placement="" style="
+            width: 520px; height: 520px;" data-html="true" title="<strong> certificazione </strong>" />
+          </div>
+          <div class="col-xs-12 col-sm-6">
+            <img src="immagini/cert1.jpg" alt="certificazione" data-toggle="popover" data-placement="" style="
+            width: 520px; height: 520px;" data-html="true" title="<strong> certificazione </strong>" />
+          </div>
+          <div class="col-xs-12 col-sm-6">
+            <img src="immagini/cert3.jpg" alt="certificazione" data-toggle="popover" data-placement="" style="
+            width: 520px; height: 520px;" data-html="true" title="<strong> certificazione </strong>" />
+          </div>
+          <div class="col-xs-12 col-sm-6">
+            <img src="immagini/inglese1.jpg" alt="certificazione" data-toggle="popover" data-placement="" style="
+            width: 520px; height: 520px;" data-html="true" title="<strong> b1 inglese certificazione </strong>" />
+          </div>
+        </div>
+
+
+        </div>
+      </div>
+      <footer>
+        <br /><br /><br /><br />
+      </footer>
     </div>
     <!-- script -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
