--- a/informazioni.html
+++ b/informazioni.html
@@ -8,58 +8,34 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="styleInformazioni.css" />
   </head>
-  <body>
-    <nav class="navbar navbar-inverse">
+  <body data-spy="scroll" data-target="#navbar-example">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-          <button
-            type="button"
-            class="navbar-toggle collapsed"
-            data-toggle="collapse"
-            data-target="#bs-example-navbar-collapse-1"
-            aria-expanded="false"
-          >
+          <!--<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-example" aria-expanded="true">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-          </button>
+          </button>-->
           <a class="navbar-brand" href="index.html">Pagina di Stefano Zogno</a>
-        </div>
+        </div> 
 
         <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <div class="collapse navbar-collapse" id="navbar-example">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="index.html">Home</a></li>
-            <li class="active">
-              <a href="informazioni.html"
-                >Informazioni <span class="sr-only">(current)</span></a
-              >
+            <li class="active"><a href="#info">Informazioni <span class="sr-only">(current)</span></a>
+            <li><a href="#compet">Competenze</a></li>
+            <li><a href="#certif">Certificati</a></li>
             </li>
-            <!--    <li class="dropdown">
-              <a
-                href="#"
-                class="dropdown-toggle"
-                data-toggle="dropdown"
-                role="button"
-                aria-haspopup="true"
-                aria-expanded="false"
-              >
-                <span class="caret"></span
-              ></a>
-              <ul class="dropdown-menu">
-                <li><a href="saperePiu.html">Voglio sapere di più</a></li>
-              </ul>
-            </li>-->
           </ul>
         </div>
-        <!-- /.navbar-collapse -->
       </div>
-      <!-- /.container-fluid -->
     </nav>
-    <hr />
-    <div class="container">
+    <br id="info"> <br> <br>
+    <div class="container" >
       <div class="row">
         <div class="col-sm-3 col-md-2 col-xs-12">
           <div class="thumbnail">
@@ -83,10 +59,11 @@
             Sono Stefano Zogno, diplomato come Perito Informatico presso IIS
             J.F.Kennedy Monselice. Sono appassionato dell'informatica in
             generale da quando avevo 12 anni. Fin da piccolo creavo progetti per
-            arduino in C# e applicazioni per divertimento. <br> Con lo studio
+            arduino in C# e applicazioni per divertimento. <br><br> Con lo studio
             dell'informatica alle superiori la mia passione si è trasformata in
-            studio e pratica. In terza superiore ho studiato C++ e HTML, in quarta JAVA e infine in quinta PHP con gestione del DB, HTML e CSS. <br> Posso annoverare qui i miei più importanti
-            progetti realizzati durante il periodo scolastico:
+            studio e pratica. In terza superiore ho studiato C++ e HTML, in quarta JAVA e infine in quinta PHP con gestione del DB, HTML e CSS. <br> <br>
+            Ora sto aspettando l'inizio dell'ITS Kennedy Padova relativo al cloud & back end developer. <br> <br> Posso annoverare qui i miei più importanti
+            progetti realizzati durante il periodo scolastico: <br>
             </h4>
           </p>
           <ul>
@@ -106,69 +83,70 @@
           </ul>
         </div>
       </div>
-      <h4 style="color:red"> COMPETENZE (clicca sulle immagini per vedere i dettagli) </h4>
-      <p class="lead"> Linguaggi:  </p>
-      <div class="row">
-        <div class="col-xs-6 col-sm-3 col-md-2">
-          <img  src="immagini/c++.jpg" alt="c++" data-toggle="popover" data-html="true" title="<strong> C++  conoscenze </strong>" 
-          data-content='<ul>
-                          <li> Puntatori </li>
-                          <li> Classi </li>
-                          <li> Structure </li>
-                          <li> Funzioni </li>
-                          <li> Basi di C++ </li>
-                        </ul>' />                       
-        </div>
-        <div class="col-xs-6 col-sm-3 col-md-2">
+      <div class="big-padding" id="compet">
+        <h4 style="color:red"> COMPETENZE (clicca sulle immagini per vedere i dettagli) <br> <br> <br> <br> </h4>
+        <p class="lead"> Linguaggi:  </p>
+        <div class="row">
+          <div class="col-xs-6 col-sm-3 col-md-2">
+            <img  src="immagini/c++.jpg" alt="c++" data-toggle="popover" data-html="true" title="<strong> C++  conoscenze </strong>" 
+            data-content='<ul>
+                            <li> Puntatori </li>
+                            <li> Classi </li>
+                            <li> Structure </li>
+                            <li> Funzioni </li>
+                            <li> Basi di C++ </li>
+                          </ul>' />                       
+          </div>
+          <div class="col-xs-6 col-sm-3 col-md-2">
           <img src="immagini/js.jpg" alt="JAVASCRIPT" data-toggle="popover" data-html="true" title="<strong> JAVASCRIPT conoscenze </strong>"
-          data-content="<ul>
-                          <li> Basi di Javascript </li>
-                        </ul>
-          "/>
+            data-content="<ul>
+                            <li> Basi di Javascript </li>
+                          </ul>
+            "/>
+          </div>
+          <div class="col-xs-6 col-sm-3 col-md-2">
+            <img src="immagini/java.jpg" alt="java" data-toggle="popover" data-html="true" title="<strong> JAVA conoscenze </strong>"
+            data-content="<ul>
+                            <li> Basi di JAVA </li>
+                            <li> OOP </li>
+                            <li> Interfaccia base </li>
+                            <li> Funzioni </li>
+                            <li> Ereditarietà, Polimorfismo </li>
+                          </ul>
+                          "/>
+          </div>
+          <div class="col-xs-6 col-sm-3 col-md-2">
+            <img src="immagini/php5.jpg" alt="php5" class="responsive" data-toggle="popover" data-html="true" style="border-right-width: 81px;"  data-placement="left" title="<strong> PHP5 conoscenze </strong>"
+            data-content="<ul>
+                            <li> Basi di PHP5 </li>
+                            <li> Funzioni </li>
+                            <li> OOP </li>
+                            <li> MySQLI </li>
+                            <li> Form </li>
+                            <li> Procedure </li>
+                            <li> Sessioni </li>
+                          </ul>
+                          "/>
+          </div>
+          <div class="col-xs-6 col-sm-3 col-md-2">
+            <img src="immagini/html5.jpg" alt="html" data-toggle="popover" data-html="true" title="<strong> HTML5 conoscenze </strong>"
+            data-content="<ul>
+                            <li> Avanzato livello di conoscenza di HTML5 </li>
+                            <li> Conoscenza di eventuali framework: Bootstrap</li>
+                            <li> WordPress & CMS </li>
+                          </ul>
+                          "/>
+          </div>
+          <div class="col-xs-6 col-sm-3 col-md-2">
+            <img src="immagini/css.jpg" alt="css" data-toggle="popover" data-html="true" title="<strong> CSS conoscenze </strong>"
+            data-content="<ul>
+                            <li> Conoscenza medio-alta di CSS </li>
+                          </ul>
+                          "/>
+          </div>
         </div>
-        <div class="col-xs-6 col-sm-3 col-md-2">
-          <img src="immagini/java.jpg" alt="java" data-toggle="popover" data-html="true" title="<strong> JAVA conoscenze </strong>"
-          data-content="<ul>
-                          <li> Basi di JAVA </li>
-                          <li> OOP </li>
-                          <li> Interfaccia base </li>
-                          <li> Funzioni </li>
-                          <li> Ereditarietà, Polimorfismo </li>
-                        </ul>
-          "/>
-        </div>
-        <div class="col-xs-6 col-sm-3 col-md-2">
-          <img src="immagini/php5.jpg" alt="php5" class="responsive" data-toggle="popover" data-html="true" style="border-right-width: 81px;"  data-placement="left" title="<strong> PHP5 conoscenze </strong>"
-          data-content="<ul>
-                          <li> Basi di PHP5 </li>
-                          <li> Funzioni </li>
-                          <li> OOP </li>
-                          <li> MySQLI </li>
-                          <li> Form </li>
-                          <li> Procedure </li>
-                          <li> Sessioni </li>
-                        </ul>
-          "/>
-        </div>
-        <div class="col-xs-6 col-sm-3 col-md-2">
-          <img src="immagini/html5.jpg" alt="html" data-toggle="popover" data-html="true" title="<strong> HTML5 conoscenze </strong>"
-          data-content="<ul>
-                          <li> Avanzato livello di conoscenza di HTML5 </li>
-                          <li> Conoscenza di eventuali framework: Bootstrap</li>
-                          <li> WordPress & CMS </li>
-                        </ul>
-          "/>
-        </div>
-        <div class="col-xs-6 col-sm-3 col-md-2">
-          <img src="immagini/css.jpg" alt="css" data-toggle="popover" data-html="true" title="<strong> CSS conoscenze </strong>"
-          data-content="<ul>
-                          <li> Conoscenza medio-alta di CSS </li>
-                        </ul>
-          "/>
-        </div>
-      </div>
-      <br /> <br />
-      <p class="lead">Database:</p> 
+        <br /> <br /> <br> <br> <br>
+        <p class="lead">Database:</p> 
         <div class="row">
           <div class="col-xs-6 col-sm-3 col-md-2">
             <img src="immagini/mysql.jpg" alt="mysql" data-toggle="popover" data-placement="" data-html="true" title="<strong> SQL conoscenze </strong>" data-content="
@@ -179,7 +157,7 @@
                         <li> JOIN </li>
                         <li> Subqueries </li>
                       </ul> 
-                    " />
+                      " />
           </div>
           <div class="col-xs-6 col-sm-3 col-md-2">
             <img src="immagini/access.jpg" alt="access" data-toggle="popover" data-html="true" title="<strong> ACCESS conoscenze </strong>" data-content="
@@ -192,70 +170,81 @@
                       </ul>
                     " />
           </div>
-      </div> 
-      <br /> <br />
-      <p class="lead">Sistemi operativi:</p>
-      <div class="row">
-        <div class="col-xs-6 col-sm-3 col-md-2">
-          <img src="immagini/windows10.jpg" alt="windows10" data-toggle="popover" data-placement="" data-html="true" title="<strong> Windows10 </strong>" data-content="
-                          " />
         </div>
-        <div class="col-xs-6 col-sm-3 col-md-2">
-          <img src="immagini/linux.jpg" alt="linux" data-toggle="popover" data-html="true" title="<strong> GNU/Linux </strong>" data-content="
+        <br /> <br /> <br> <br> <br>
+        <p class="lead">Sistemi operativi:</p>
+        <div class="row">
+          <div class="col-xs-6 col-sm-3 col-md-2">
+            <img src="immagini/windows10.jpg" alt="windows10" data-toggle="popover" data-placement="" data-html="true" title="<strong> Windows10 </strong>" data-content="
                           " />
-        </div>
-        <div class="col-xs-6 col-sm-3 col-md-2">
-          <img src="immagini/android.jpg" alt="android" data-toggle="popover" data-placement="" data-html="true" title="<strong> Android </strong>" data-content="
+          </div>
+          <div class="col-xs-6 col-sm-3 col-md-2">
+            <img src="immagini/linux.jpg" alt="linux" data-toggle="popover" data-html="true" title="<strong> GNU/Linux </strong>" data-content="
+                          " />
+          </div>
+          <div class="col-xs-6 col-sm-3 col-md-2">
+            <img src="immagini/android.jpg" alt="android" data-toggle="popover" data-placement="" data-html="true" title="<strong> Android </strong>" data-content="
                                   " />
+          </div>
         </div>
       </div>
-      <br> <br>
-      <p class="lead">Certificazioni:</p> 
+        <br>
+      <p class="lead big-padding" id="certif">Certificazioni:</p> 
       <div class="row">
-          <div class="col-xs-12 col-sm-6">
-            <img src="immagini/certificazioneCode.jpeg" alt="certificazione" data-toggle="popover" data-placement="" style="
-            width: 520px; height: 500px;" data-html="true" title="<strong> certificazione </strong>" />
-          </div>
-          <div class="col-xs-12 col-sm-6">
-            <img src="immagini/ZognoStefanoCertificazione.jpg" alt="certificazione" data-toggle="popover" data-placement="" style="
-            width: 520px; height: 520px;" data-html="true" title="<strong> certificazione </strong>" />
-          </div>
-          <div class="col-xs-12 col-sm-6">
-            <img src="immagini/francese1.jpg" alt="certificazione" data-toggle="popover" data-placement="" style="
-            width: 520px; height: 500px;" data-html="true" title="<strong> certificazione </strong>" />
-          </div>
-          <div class="col-xs-12 col-sm-6">
-            <img src="immagini/francese2.jpg" alt="certificazione" data-toggle="popover" data-placement="" style="
-            width: 520px; height: 500px;" data-html="true" title="<strong> certificazione </strong>" />
-          </div>
-          <div class="col-xs-12 col-sm-6">
-            <img src="immagini/cert2.jpg" alt="certificazione" data-toggle="popover" data-placement="" style="
-            width: 520px; height: 520px;" data-html="true" title="<strong> certificazione </strong>" />
-          </div>
-          <div class="col-xs-12 col-sm-6">
-            <img src="immagini/cert1.jpg" alt="certificazione" data-toggle="popover" data-placement="" style="
-            width: 520px; height: 520px;" data-html="true" title="<strong> certificazione </strong>" />
-          </div>
-          <div class="col-xs-12 col-sm-6">
-            <img src="immagini/cert3.jpg" alt="certificazione" data-toggle="popover" data-placement="" style="
-            width: 520px; height: 520px;" data-html="true" title="<strong> certificazione </strong>" />
-          </div>
-          <div class="col-xs-12 col-sm-6">
-            <img src="immagini/inglese1.jpg" alt="certificazione" data-toggle="popover" data-placement="" style="
-            width: 520px; height: 520px;" data-html="true" title="<strong> b1 inglese certificazione </strong>" />
-          </div>
+        <div class="col-xs-12 col-sm-6">
+          <img src="immagini/certificazioneCode.jpeg" alt="certificazione" data-toggle="popover" data-placement="" style="
+          width: 520px; height: 500px;" data-html="true" title="<strong> certificazione </strong>" />
         </div>
-
-
+        <div class="col-xs-12 col-sm-6">
+          <img src="immagini/ZognoStefanoCertificazione.jpg" alt="certificazione" data-toggle="popover" data-placement="" style="
+          width: 520px; height: 520px;" data-html="true" title="<strong> certificazione </strong>" />
+        </div>
+        <div class="col-xs-12 col-sm-6">
+          <img src="immagini/francese1.jpg" alt="certificazione" data-toggle="popover" data-placement="" style="
+          width: 520px; height: 500px;" data-html="true" title="<strong> certificazione </strong>" />
+        </div>
+        <div class="col-xs-12 col-sm-6">
+          <img src="immagini/francese2.jpg" alt="certificazione" data-toggle="popover" data-placement="" style="
+          width: 520px; height: 500px;" data-html="true" title="<strong> certificazione </strong>" />
+        </div>
+        <div class="col-xs-12 col-sm-6">
+          <img src="immagini/cert2.jpg" alt="certificazione" data-toggle="popover" data-placement="" style="
+          width: 520px; height: 520px;" data-html="true" title="<strong> certificazione </strong>" />
+        </div>
+        <div class="col-xs-12 col-sm-6">
+          <img src="immagini/cert1.jpg" alt="certificazione" data-toggle="popover" data-placement="" style="
+          width: 520px; height: 520px;" data-html="true" title="<strong> certificazione </strong>" />
+        </div>
+        <div class="col-xs-12 col-sm-6">
+          <img src="immagini/cert3.jpg" alt="certificazione" data-toggle="popover" data-placement="" style="
+          width: 520px; height: 520px;" data-html="true" title="<strong> certificazione </strong>" />
+        </div>
+        <div class="col-xs-12 col-sm-6">
+          <img src="immagini/inglese1.jpg" alt="certificazione" data-toggle="popover" data-placement="" style="
+          width: 520px; height: 520px;" data-html="true" title="<strong> b1 inglese certificazione </strong>" />
         </div>
       </div>
-      <footer>
-        <br /><br /><br /><br />
-      </footer>
+    </div>
+    <footer>
+      <br /><br /><br /><br />
+    </footer>
     </div>
     <!-- script -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script> $('[data-toggle="popover"]').popover() </script>
+    <script>
+      $('body').scrollspy({ target: '#navbar-example' })
+      $(".navbar-collapse ul li a[href^='#']").on('click', function (e) {
+        target = this.hash;
+        e.preventDefault();
+
+        $('html,body').animate({
+          scrollTop: $(this.hash).offset().top
+        }, 600, function () {
+          window.location.hash = target;
+        });
+      });
+    </script>
   </body>
 </html>
