--- a/informazioni.html
+++ b/informazioni.html
@@ -35,7 +35,7 @@
       </div>
     </nav>
     <br id="info"> <br> <br>
-    <div class="container" >
+    <div class="container" id="container" >
       <div class="row">
         <div class="col-sm-3 col-md-2 col-xs-12">
           <div class="thumbnail">
@@ -109,6 +109,8 @@
             data-content="<ul>
                             <li> Basi di JAVA </li>
                             <li> OOP </li>
+                            <li> Socket </li>
+                            <li> Servlet (base) </li>
                             <li> Interfaccia base </li>
                             <li> Funzioni </li>
                             <li> Ereditarietà, Polimorfismo </li>
@@ -160,6 +162,13 @@
                       " />
           </div>
           <div class="col-xs-6 col-sm-3 col-md-2">
+            <img src="immagini/mariadb.jpg" alt="mariadb" data-toggle="popover" data-html="true" title="<strong> ACCESS conoscenze </strong>" data-content="
+                                <ul>
+                                  <li> Gestione DB </li>
+                                </ul>
+                              " />
+          </div>
+          <div class="col-xs-6 col-sm-3 col-md-2">
             <img src="immagini/access.jpg" alt="access" data-toggle="popover" data-html="true" title="<strong> ACCESS conoscenze </strong>" data-content="
                       <ul>
                         <li> Maschere </li>
@@ -189,7 +198,7 @@
         </div>
       </div>
         <br>
-      <p class="lead big-padding" id="certif">Certificazioni:</p> 
+      <p class="lead big-padding" id="certif" style="color: red;">Certificazioni:</p> 
       <div class="row">
         <div class="col-xs-12 col-sm-6">
           <img src="immagini/certificazioneCode.jpeg" alt="certificazione" data-toggle="popover" data-placement="" style="
@@ -201,27 +210,27 @@
         </div>
         <div class="col-xs-12 col-sm-6">
           <img src="immagini/francese1.jpg" alt="certificazione" data-toggle="popover" data-placement="" style="
-          width: 520px; height: 500px;" data-html="true" title="<strong> certificazione </strong>" />
+          width: 520px; height: 510px;" data-html="true" title="<strong> certificazione </strong>" />
         </div>
         <div class="col-xs-12 col-sm-6">
           <img src="immagini/francese2.jpg" alt="certificazione" data-toggle="popover" data-placement="" style="
-          width: 520px; height: 500px;" data-html="true" title="<strong> certificazione </strong>" />
+          width: 520px; height: 510px;" data-html="true" title="<strong> certificazione </strong>" />
         </div>
         <div class="col-xs-12 col-sm-6">
           <img src="immagini/cert2.jpg" alt="certificazione" data-toggle="popover" data-placement="" style="
-          width: 520px; height: 520px;" data-html="true" title="<strong> certificazione </strong>" />
+          width: 520px; height: 530px;" data-html="true" title="<strong> certificazione </strong>" />
         </div>
         <div class="col-xs-12 col-sm-6">
           <img src="immagini/cert1.jpg" alt="certificazione" data-toggle="popover" data-placement="" style="
-          width: 520px; height: 520px;" data-html="true" title="<strong> certificazione </strong>" />
+          width: 520px; height: 530px;" data-html="true" title="<strong> certificazione </strong>" />
         </div>
         <div class="col-xs-12 col-sm-6">
           <img src="immagini/cert3.jpg" alt="certificazione" data-toggle="popover" data-placement="" style="
-          width: 520px; height: 520px;" data-html="true" title="<strong> certificazione </strong>" />
+          width: 520px; height: 530px;" data-html="true" title="<strong> certificazione </strong>" />
         </div>
         <div class="col-xs-12 col-sm-6">
           <img src="immagini/inglese1.jpg" alt="certificazione" data-toggle="popover" data-placement="" style="
-          width: 520px; height: 520px;" data-html="true" title="<strong> b1 inglese certificazione </strong>" />
+          width: 520px; height: 530px;" data-html="true" title="<strong> b1 inglese certificazione </strong>" />
         </div>
       </div>
     </div>
