--- a/informazioni.html
+++ b/informazioni.html
@@ -80,6 +80,48 @@
                 persone disabili (codice C#, uso di Arduino)
               </h4>
             </li>
+            <li>
+              <h4>
+                Casa domotica impianto anti-incendio: <i> Con un rilevatore di fumo installato dentro la casa, si controllava la presenza di livelli di fumo o di fuochi dentro la stanza, e in caso di emergenza incendio, si attivavano le due ventole, si apriva la porta d'emergenza illuminata e scattava l'allarme anti-incendio </i> (codice C#, uso di Arduino)
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+                  FOTO PROGETTO
+                </button>
+                <!-- Modal -->
+                <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                  <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                      </div>
+                      <div class="modal-body">
+                        <img src="immagini/casa5.jpg" style="
+                        height: 410px;
+                        width: 500px;" alt=""> <br>
+                        <img src="immagini/casa6.jpg" style="
+                        height: 430px;
+                        width: 500px;" alt=""> <br>
+                        <img src="immagini/casa1.jpg" style="
+                        height: 430px;
+                        width: 500px;" alt=""> <br>
+                        <img src="immagini/casa2.jpg" style="
+                        height: 410px;
+                        width: 500px;" alt=""> <br>
+                        <img src="immagini/casa3.jpg" style="
+                        height: 410px;
+                        width: 500px;" alt=""> <br>
+                        <img src="immagini/casa4.jpg" style="
+                        height: 410px;
+                        width: 500px;" alt=""> <br>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </h4>
+            </li>
           </ul>
         </div>
       </div>
@@ -200,35 +242,35 @@
         <br>
       <p class="lead big-padding" id="certif" style="color: red;">Certificazioni:</p> 
       <div class="row">
-        <div class="col-xs-12 col-sm-6">
+        <div class="col-xs-12 col-md-6">
           <img src="immagini/certificazioneCode.jpeg" alt="certificazione" data-toggle="popover" data-placement="" style="
           width: 520px; height: 500px;" data-html="true" title="<strong> certificazione </strong>" />
         </div>
-        <div class="col-xs-12 col-sm-6">
+        <div class="col-xs-12 col-md-6">
           <img src="immagini/ZognoStefanoCertificazione.jpg" alt="certificazione" data-toggle="popover" data-placement="" style="
           width: 520px; height: 520px;" data-html="true" title="<strong> certificazione </strong>" />
         </div>
-        <div class="col-xs-12 col-sm-6">
+        <div class="col-xs-12 col-md-6">
           <img src="immagini/francese1.jpg" alt="certificazione" data-toggle="popover" data-placement="" style="
           width: 520px; height: 510px;" data-html="true" title="<strong> certificazione </strong>" />
         </div>
-        <div class="col-xs-12 col-sm-6">
+        <div class="col-xs-12 col-md-6">
           <img src="immagini/francese2.jpg" alt="certificazione" data-toggle="popover" data-placement="" style="
           width: 520px; height: 510px;" data-html="true" title="<strong> certificazione </strong>" />
         </div>
-        <div class="col-xs-12 col-sm-6">
+        <div class="col-xs-12 col-md-6">
           <img src="immagini/cert2.jpg" alt="certificazione" data-toggle="popover" data-placement="" style="
           width: 520px; height: 530px;" data-html="true" title="<strong> certificazione </strong>" />
         </div>
-        <div class="col-xs-12 col-sm-6">
+        <div class="col-xs-12 col-md-6">
           <img src="immagini/cert1.jpg" alt="certificazione" data-toggle="popover" data-placement="" style="
           width: 520px; height: 530px;" data-html="true" title="<strong> certificazione </strong>" />
         </div>
-        <div class="col-xs-12 col-sm-6">
+        <div class="col-xs-12 col-md-6">
           <img src="immagini/cert3.jpg" alt="certificazione" data-toggle="popover" data-placement="" style="
           width: 520px; height: 530px;" data-html="true" title="<strong> certificazione </strong>" />
         </div>
-        <div class="col-xs-12 col-sm-6">
+        <div class="col-xs-12 col-md-6">
           <img src="immagini/inglese1.jpg" alt="certificazione" data-toggle="popover" data-placement="" style="
           width: 520px; height: 530px;" data-html="true" title="<strong> b1 inglese certificazione </strong>" />
         </div>
