--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           96/100). Gli studi sono durati 5 anni, ho avuto anche l'oppurtunità di
           partecipare a vari progetti informatici e tecnologici. (vedi su: <a href="informazioni.html">informazioni</a> )
           <br />
-          Al momento sto aspettando l'inizio dell'ITS di Padova che concerne il
+          Al momento sto frequentando l'ITS Kennedy di Padova che concerne il
           cloud & backend developer.
         </div>
       </div>
