--- a/informazioni.html
+++ b/informazioni.html
@@ -39,7 +39,7 @@
       <div class="row">
         <div class="col-sm-3 col-md-2 col-xs-12">
           <div class="thumbnail">
-            <img src="immagini/img4.JPG" alt="CV" />
+            <img src="immagini/img4.JPEG" alt="CV" />
             <div class="caption">
               <h3>CV</h3>
               <p>Clicca il bottone blu per vedere il mio CV</p>
@@ -62,8 +62,8 @@
             arduino in C# e applicazioni per divertimento. <br><br> Con lo studio
             dell'informatica alle superiori la mia passione si è trasformata in
             studio e pratica. In terza superiore ho studiato C++ e HTML, in quarta JAVA e infine in quinta PHP con gestione del DB, HTML e CSS. <br> <br>
-            Ora sto aspettando l'inizio dell'ITS Kennedy Padova relativo al cloud & back end developer. <br> <br> Posso annoverare qui i miei più importanti
-            progetti realizzati durante il periodo scolastico: <br>
+            Ora frequento l'ITS Kennedy Padova relativo al cloud & back end developer. <br> <br> Posso annoverare qui i miei più importanti
+            progetti realizzati durante il periodo scolastico al IIS Kennedy Monselice: <br>
             </h4>
           </p>
           <ul>
@@ -169,6 +169,13 @@
                             <li> Form </li>
                             <li> Procedure </li>
                             <li> Sessioni </li>
+                          </ul>
+                          "/>
+          </div>
+          <div class="col-xs-6 col-sm-3 col-md-2">
+            <img src="immagini/angular.png" alt="angular" data-toggle="popover" data-html="true" title="<strong> angular conoscenze </strong>"
+            data-content="<ul>
+                            <li> Conoscenza media di angular </li>
                           </ul>
                           "/>
           </div>
