--- a/informazioni.html
+++ b/informazioni.html
@@ -245,6 +245,22 @@
                                   " />
           </div>
         </div>
+        <br> <br> <br> <br>
+        <p class="lead">Programmi:</p>
+        <div class="row">
+          <div class="col-xs-6 col-sm-3 col-md-2">
+            <img src="immagini/solidWorks.jpg" alt="solidWorks" data-toggle="popover" data-placement="" data-html="true" title="<strong> SolidWorks </strong>" data-content="
+                          " />
+          </div>
+          <div class="col-xs-6 col-sm-3 col-md-2">
+            <img src="immagini/cisco.jpg" alt="cisco" data-toggle="popover" data-html="true" title="<strong> Cisco Packet Tracert </strong>" data-content="
+                          " />
+          </div>
+          <div class="col-xs-6 col-sm-3 col-md-2">
+            <img src="immagini/office.jpg" alt="office" data-toggle="popover" data-placement="" data-html="true" title="<strong> Pacchetti Office </strong>" data-content="
+                                  " />
+          </div>
+        </div>
       </div>
         <br>
       <p class="lead big-padding" id="certif" style="color: red;">Certificazioni:</p> 
